--- a/app/components/news.html
+++ b/app/components/news.html
@@ -25,6 +25,7 @@
   </div>
   <div
     id="news-tab-content-container"
+    template="news-tab-content-container-template"
     class="space-y-5 animate-fade-in-up p-1 hidden flex-1 min-h-0 overflow-y-auto custom-scrollbar"
   >
     <!-- AI Analysis Container -->
